Fix width to prevent bad overflow on firefox

--- a/src/index.css
+++ b/src/index.css
@@ -609,7 +609,7 @@ div.problem-container {
         margin-top: 5px;
         margin-left: 15px;
         margin-right: 15px;
-        width: 270px
+        width: 217px
     }
     .google-assignment-name {
         max-width: 200px
